--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js gRPC Structure for TypeScript Example",
   "main": "dist/server.js",
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,15 +15,15 @@
     "health": "node dist/health"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.5",
+    "@grpc/grpc-js": "^1.9.14",
     "grpc-health-check": "^2.0.0",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@types/node": "^18.18.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
+    "@types/node": "^20.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
@@ -31,9 +31,10 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-sonarjs": "^0.21.0",
     "grpc-tools": "^1.12.4",
+    "protobufjs": "^7.2.6",
     "rimraf": "^5.0.5",
-    "ts-proto": "^1.159.2",
-    "typescript": "^5.2.2"
+    "ts-proto": "^1.167.1",
+    "typescript": "^5.3.3"
   },
   "repository": {
     "type": "git",
